...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weekList"
            android:layout_width="0dp"
            android:layout_weight="6"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay1"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay1"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay1"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay2"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay2"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay2"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay3"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay3"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay3"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay4"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay4"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay4"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay5"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay5"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay5"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay6"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay6"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay6"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
        </Button>
        <NumberPicker
            android:id="@+id/hoursPickerDay7"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/_5sdp"
...
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_gravity="center"
            android:id="@+id/minutesPickerDay7"
            android:layout_weight="2"
            android:layout_width="0dp"
...
            android:background="@drawable/back_for_share_button"
            android:textSize="@dimen/_8sdp"
            android:id="@+id/doneButtonDay7"
            android:layout_gravity="center"
            android:layout_width="0dp"
...
            android:fontFamily="monospace"
            android:textColor="#000"
            android:id="@+id/Exercise_Splited_Hours"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp">
...
        <ProgressBar
            android:layout_weight="4"
            android:id="@+id/progressSingle"
            android:visibility="invisible"
            android:layout_gravity="center"
...
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:id="@+id/Profile_screen">
        </ImageView>
    </LinearLayout>
...
