...
            android:layout_toRightOf="@+id/login_text_view"
            android:fontFamily="sans-serif"
            android:text="Sign Up"
            android:textColor="@color/fill1" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
...
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="@color/askusertypestatusbar"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
...
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="@color/askusertypestatusbar"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/psswrd_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
...
            android:textAlignment="center"
            android:textColorHint="@color/askusertypestatusbar"
            android:textSize="12dp" />


        <EditText
            android:id="@+id/C_psswrd_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/psswrd_editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
...


    </RelativeLayout>


    <Button
        android:id="@+id/goButton"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/top"
...
