...
    android:padding="@dimen/_12sdp"
    android:layout_height="wrap_content" >



    <TextView
        android:id="@+id/text_for_cycling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Please Select Hours And Week For Cycling"
        android:textColor="@color/White"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:layout_centerHorizontal="true">

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </NumberPicker>

    <Button
        android:id="@+id/exercise_upload_button"
        android:layout_below="@id/number_picker"
        android:layout_centerHorizontal="true"
        android:background="@drawable/date_picker_button"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Set Target"
        android:layout_width="@dimen/_125sdp"
...

    <TextView

        android:id="@+id/declaration_of_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calenderbb"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="Starts At : "
        android:layout_alignLeft="@id/calenderbb">

    </TextView>

...
