...
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/askFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <RelativeLayout
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/normalSignup"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
...
            android:fontFamily="sans-serif"
            android:text="Trainer"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/LogInBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/trainerSignup"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
...
